backport: re PR target/43869 (ms_abi -> sysv_abi passing float arguments incorrectly)

2010-05-23  Naarten Lankhorst  <mlankhorst@codeweavers.com>

	Merged from trunk
        PR target/43869
        * config/i386/i386.c: Make sure that the correct regparm is passed.

2010-05-23  Naarten Lankhorst  <mlankhorst@codeweavers.com>

	Merged from trunk
        PR target/43869
        * gcc.c-target/pr43869.c: New test.

From-SVN: r159756